[package]
name = "esp_idf_build"
version = "0.1.3"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"

description = "Build scripts helpful when working with ESP-IDF"
license = "MIT"
homepage = "https://github.com/jeikabu/esp_idf_build/"
repository = "https://github.com/jeikabu/esp_idf_build/"
keywords = ["esp-idf", "esp32"]
categories = ["embedded", "development-tools::build-utils"]
readme = "README.md"

[features]
default = ["build_idf"]
build_idf = [] # `build_native()` runs `idf.py build`
build_make = [] # `build_native()` runs `make`

[dependencies]
glob = "0.3"
#TODO: seems indicatif cannot display from build.rs?
#indicatif = "0.14"
